name:                hint-demo
version:             0.1.0.0
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hint-demo
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , hint
                     , showable
  default-language:    Haskell2010
