name:                showable-tree
version:             0.1.0.0
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Showable.Tree
  other-extensions:    GADTs
  build-depends:       base >=4.7 && <4.8
                     , showable
  default-language:    Haskell2010
